# Agent-Development-Kit

./: .gitignore
adk00/: README.md
adk01/: dotent.env
adk02/: adk_readme.md
adk03/: adk_readme.md
adk04/: README.md  chat_ollama.py
adk08/: README.md  bq_query.sql  requirements.txt
adk09/: README.md  pq_query.sql  pyproject.toml  requirements.txt  test.txt
adk09/market_agent/: agent.py  config.py  prompt.py
adk09/market_agent/tools/: query_tool.py  search_tool.py
adk10/: pyproject.toml  requirements.txt
adk11-whatsapp/: WhatsappMessageSender.py
adk12/: AgentMemory.ipynb  Artifacts.ipynb  Chatbot-Database01.py  Chatbot-Database02.py  Chatbot-InMemory.py  Context.ipynb  FunctionTools.ipynb  Gaurdrail.md  Gaurdrail_BeforeModelCallback.ipynb  Gaurdrail_BeforeToolCallback.ipynb  ModelGaurdrail_After_Model_Callback.py  README.md  State_Script.ipynb  ToolGaurdrail_Before_Tool_Callback.py  adk_terminology.ipynb  agent_data.db  config.py  db_agent_data.db  redis_session.py  requirements.txt  test.py
adk12-memory/: ConversationalContext.ipynb  DatabaseSessionService.ipynb  Gaurdrail_AfterModelCallback.ipynb  Gaurdrail_AfterToolCallback.ipynb  InMemorySessionService.ipynb  LTK.ipynb  ModelGaurdrail_Before_Model_Callback.py  Rewind.ipynb  State.ipynb  State_Script.ipynb  ToolGaurdrail_After_Tool_Callback.py  VertexAiSessionService.ipynb  agent.py  docker-compose.yml  my_agent_data.db  test.py
adk13/: Artifacts.ipynb  CustomAgent.ipynb  Events.ipynb  LoopAgent.ipynb  ParallelAgent.ipynb  SequentialAgent.ipynb  main.py  optimized_jd.md
adk14/: Image-Gen.ipynb
(+527 files in other folders)
